--- a/Hospital/Frontend/src/main/java/Hospital/Presentacion/Medicos/Prescripcion/View.form
+++ b/Hospital/Frontend/src/main/java/Hospital/Presentacion/Medicos/Prescripcion/View.form
@@ -74,7 +74,7 @@
                   </component>
                 </children>
               </grid>
-              <grid id="4a1a5" binding="ajustarPane" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="4a1a5" binding="ajustarPane" layout-manager="GridLayoutManager" row-count="1" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="10" left="10" bottom="10" right="10"/>
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -114,18 +114,30 @@
                     <properties>
                       <background color="-1618884"/>
                       <foreground color="-1"/>
+                      <hideActionText value="false"/>
                       <text value="Descartar medicamento"/>
                     </properties>
                   </component>
                   <component id="c801f" class="javax.swing.JButton" binding="detallesButton" default-binding="true">
                     <constraints>
-                      <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <background color="-13330213"/>
                       <foreground color="-1"/>
                       <text value="Detalles"/>
                       <visible value="false"/>
+                    </properties>
+                  </component>
+                  <component id="65061" class="javax.swing.JButton" binding="Modificar_Prescripcion">
+                    <constraints>
+                      <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <background color="-14442597"/>
+                      <foreground color="-1"/>
+                      <hideActionText value="false"/>
+                      <text value="Modificar Prescipcion"/>
                     </properties>
                   </component>
                 </children>
