--- a/Hospital/Frontend/src/main/java/Hospital/Presentacion/Mensajes/View.form
+++ b/Hospital/Frontend/src/main/java/Hospital/Presentacion/Mensajes/View.form
@@ -13,7 +13,7 @@
     </properties>
     <border type="bevel-raised"/>
     <children>
-      <grid id="bb07d" binding="main" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="bb07d" binding="main" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
@@ -65,6 +65,14 @@
               </component>
             </children>
           </scrollpane>
+          <component id="4bc17" class="javax.swing.JTextField" binding="prueba">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
         </children>
       </grid>
     </children>
